--- a/tests/cpp-empty-test/proj.win32/cpp-empty-test.vcxproj.filters
+++ b/tests/cpp-empty-test/proj.win32/cpp-empty-test.vcxproj.filters
@@ -20,6 +20,12 @@
     <ClCompile Include="main.cpp">
       <Filter>win32</Filter>
     </ClCompile>
+    <ClCompile Include="Path.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="Actor.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h">
@@ -33,6 +39,12 @@
     </ClInclude>
     <ClInclude Include="..\Classes\AppMacros.h">
       <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Path.h">
+      <Filter>win32</Filter>
+    </ClInclude>
+    <ClInclude Include="Actor.h">
+      <Filter>win32</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
